# generic-static-cache

./: Cargo.toml  README.md
src/: lib.rs
